# alphazero_cpp

./: CMakeLists.txt  Layout  main.cpp
checklists/: bitboard_refactor_checklist
include/: AZTypes.hpp  AlphaZeroController.hpp  AlphaZeroTrainer.hpp  Bitboard.hpp  GameStatus.hpp  MCTS.hpp  ModelInterface.hpp  MoveGeneration.hpp  MoveMapping.hpp  Movement.hpp  Network.hpp  State.hpp  StateEncoder.hpp  StateTransformer.hpp  StateTransition.hpp
include/Pieces/: Bishops.hpp  Kings.hpp  Knights.hpp  Pawns.hpp  Pieces.hpp  Queens.hpp  Rooks.hpp  SimplePieces.hpp  SlidingPieces.hpp
include/bitboard/: bitboard_utils.hpp  movegen_simple.hpp  movegen_sliding.hpp  piece_type.hpp
src/: AlphaZeroController.cpp  AlphaZeroTrainer.cpp  Bitboard.cpp  GameStatus.cpp  MCTS.cpp  ModelInterface.cpp  MoveGeneration.cpp  Network.cpp  State.cpp  StateEncoder.cpp  StateTransformer.cpp  StateTransition.cpp
src/Pieces/: Pieces.cpp
src/bitboard/: movegen_simple.cpp  movegen_sliding.cpp
tests/: test_bitboard.cpp  test_bitboard.hpp  test_changePerspective.cpp  test_changePerspective.hpp  test_pieces.cpp  test_pieces.hpp
